[package]
name = "geo-performance-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# log = "0.4.14"
# env_logger = "0.9.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
xmltree = "0.10.3"
futures = "0.3.19"
geojson = { version = "0.22.3", features = ["geo-types"] }
geo-types = "0.7.4"
geo-clipper = "0.7.3"
geo = "0.22.0"
geo-booleanop = { git = "https://github.com/21re/rust-geo-booleanop" }
json = "0.12.4"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.80"
serde_repr = "0.1"
num = "0.4"
num-traits = "0.2"
num-derive = "0.2"
